address some todos